added signup handler and swagger docs
